Add grid layout

--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html>
 
 <head>
-	<title>Parcel Sandbox</title>
+	<charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, inital-scale=1.0">
+	<title>Sticky Notes</title>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="src/styles.css">
+	<script src="src/index.js" defer></script>
 </head>
 
 <body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
+	<div id="app">
+		<textarea class="note">Some sample text</textarea>
+		<button class="add-note" type="button">+</button>
+	</div>
 </body>
 
 </html>
