--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
 	<div id="app">
 		<textarea class="note">Some sample text</textarea>
+		<textarea class="note">Some sample text</textarea>
+		<textarea class="note">Some sample text</textarea>
+		<textarea class="note">Some sample text</textarea>
 		<button class="add-note" type="button">+</button>
 	</div>
 </body>
